# deepy-pytorch

./: .gitignore  LICENSE  README.md  conf.py  index.rst  pyproject.toml
deepy/: __init__.py  core.py  dataset.py  layer.py  model.py  trainer.py  transform.py  util.py
deepy/data/: __init__.py  audiodataset.py  dataset.py  picklefolder.py  toydataset.py  transform.py  util.py  visiondataset.py
deepy/data/audio/: __init__.py  audiodataset.py  dcase2020task2.py  tau2019.py  tmp.py  transform.py
deepy/data/vision/: __init__.py  caimef.py  tmp.py  transform.py  visiondataset.py
deepy/nn/: __init__.py  autoencoder.py  dcgan.py  functional.py  itmnet.py  layer.py  model.py  resnet.py  senet.py  unet.py
deepy/nn/model/: __init__.py  autoencoder.py  dcgan.py  invertible_unet.py  itmnet.py  resnet.py  senet.py  unet.py  vae.py  vgg.py
deepy/nn/vision/: functional.py
deepy/train/: __init__.py  extension.py  trainer.py
deepy/train/trainer/: __init__.py  classifier.py  gan.py  regressor.py  trainer.py  vae.py
docs/: conf.py  deepy.rst
docs_build/: .buildinfo  deepy.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_build/.doctrees/: deepy.doctree  environment.pickle  index.doctree  modules.doctree
docs_build/_modules/: index.html
docs_build/_modules/deepy/: core.html  dataset.html  layer.html  model.html  trainer.html  transform.html  util.html
docs_build/_sources/: deepy.rst.txt  index.rst.txt  modules.rst.txt
test/: test_data.py  test_nn.py
