[tool.poetry]
name = "deepy"
version = "0.2.3"
description = ""
authors = ["popura <popura.net@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1.3"
requests = "^2.22.0"
rarfile = "^3.1"
torch = "^1.7.0"
cupy = "^7.8.0"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"
torchsummary = "^1.5.1"
Sphinx = "^2.4.1"
ipython = "^7.12.0"
torchvision = "^0.8.1"
torchaudio = "^0.7.0"
kornia = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
