[tool.poetry]
name = "deepy"
version = "0.5.0"
description = "A personal toolkit for enhancing PyTorch"
authors = ["Yuma Kinoshita <ykinoshita@tmu.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.1.3"
requests = "^2.22.0"
rarfile = "^3.1"
torch = "^1.7.0"
numpy = "^1.19.1"

[tool.poetry.extras]
torchinfo = "^1.4.4"
torchvision = "^0.8.2"
torchaudio = "^0.7.1"
kornia = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"
Sphinx = "^2.4.1"
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
