[tool.poetry]
name = "deepy"
version = "0.5.0"
description = "A personal toolkit for enhancing PyTorch"
authors = ["Yuma Kinoshita <ykinoshita@tmu.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.1.3"
requests = "^2.22.0"
rarfile = "^3.1"
torch = "^1.7.0"
numpy = "^1.19.1"
torchvision = {version = "^0.9.0", optional = true}
torchaudio = {version = "^0.8.0", optional = true}
kornia = {version = "^0.5.0", optional = true}

[tool.poetry.extras]
vision = ["torchvision", "kornia"]
audio = ["torchaudio"]


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"
Sphinx = "^2.4.1"
ipython = "^7.12.0"
torchinfo = "^1.4.4"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
